# not-a-virus

./: .gitignore  Cargo.toml  README.md
src/: main.rs  scan.rs  webhook.rs  window.rs
