[package]
name = "not-a-virus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
serenity = "0.11.5"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
